2007-07-08  Mark Wielaard  <mark@klomp.org>

	* acinclude.m4 (CHECK_HEADERS): Add check for alsa/asoundlib.h.
	* configure: Regenerated.

2007-07-06  Kyle Galloway <kgallowa@redhat.com>

	* patches/icedtea-buildfix.patch: Add amd64 build fix as well.

2007-07-06  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Update for b15.
	* Makefile.in: Regenerated.
	* patches/icedtea-copy-plugs.patch: Update for b15.
	* patches/icedtea-debuginfo.patch: Update for b15.
	* patches/icedtea-buildfix.patch: New file.

2007-07-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (snapshot): New target.
	(.PHONY): Add snapshot.

2007-07-05  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated.
	* AUTHORS: Added Casey Marshall.
	* Makefile.am: Added new patch.
	* Makefile.in: Regenerated.
	* jce/javax/crypto/KeyGenerator.java: Removed unnecessary functions.
	* patches/icedtea-java.security.patch: Updated with new ssl provider.
	* patches/icedtea-ssl.patch: New patch.

2007-07-05  Lillian Angel  <langel@redhat.com>

	* jce/gnu/javax/net/ssl/AbstractSessionContext.java: Removed.
	* jce/gnu/javax/net/ssl/EntropySource.java: Removed.
	* jce/gnu/javax/net/ssl/NullManagerParameters.java: Removed.
	* jce/gnu/javax/net/ssl/PreSharedKeyManager.class
	* jce/gnu/javax/net/ssl/PreSharedKeyManager.java: Removed.
	* jce/gnu/javax/net/ssl/PreSharedKeyManagerParameters.java: Removed.
	* jce/gnu/javax/net/ssl/PrivateCredentials.java: Removed.
	* jce/gnu/javax/net/ssl/SRPManagerParameters.java: Removed.
	* jce/gnu/javax/net/ssl/SRPTrustManager.java: Removed.
	* jce/gnu/javax/net/ssl/SSLCipherSuite.java: Removed.
	* jce/gnu/javax/net/ssl/SSLProtocolVersion.java: Removed.
	* jce/gnu/javax/net/ssl/SSLRecordHandler.java: Removed.
	* jce/gnu/javax/net/ssl/Session.java: Removed.
	* jce/gnu/javax/net/ssl/SessionStoreException.java: Removed.
	* jce/gnu/javax/net/ssl/StaticTrustAnchors.java: Removed.
	* jce/gnu/javax/net/ssl/provider/AbstractHandshake.java: Removed.